--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.10.1
   flutter_dotenv: ^5.1.0
+  go_router: ^14.0.0
+  flutter_secure_storage: ^9.2.4
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
