--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   go_router: ^14.0.0
   flutter_secure_storage: ^9.2.4
   provider: ^6.0.5
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
