style(screens, router): Refactor code structure for improved readability and maintainability. - Create style.dart for setting up the theme of the app including colorScheme and textTheme. (style.dart) - Change selectedItemColor and backgroundColor to be using Theme.of(context).colorScheme. (router.dart) - Change backgroundColor and color to be using Theme.of(context).colorScheme. (auth_screen.dart) - Change some styles to be using Theme.of(context).colorScheme and adjust some size of Widgets. (home_screen.dart)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   provider: ^6.0.5
   image_picker: ^1.2.0
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -80,7 +81,17 @@ assets:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+# fonts:
+#     - family: Poppins
+#       fonts:
+#         - asset: assets/fonts/Poppins-Regular.ttf
+#         - asset: assets/fonts/Poppins-Bold.ttf
+#           weight: 700
+#     - family: ProzaLibre
+#       fonts:
+#         - asset: assets/fonts/ProzaLibre-Regular.ttf
+#         - asset: assets/fonts/ProzaLibre-Bold.ttf
+#           weight: 700
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
